# Senten

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Caddyfile.example  DEPLOY.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.server.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements-dev.in  requirements.in  requirements.txt  tailwind.config.js
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docker.yml
app/: config.py  limiter.py  logging_config.py  main.py  utils.py
app/db/: database.py  models.py
app/middleware/: auth.py  security.py
app/models/: schemas.py
app/routers/: admin.py  auth.py  history.py  i18n.py  profile.py  translate.py  usage.py
app/services/: deepl_service.py  history_service.py  i18n_service.py  llm_service.py  usage_service.py  user_service.py  validation.py
data/: .gitkeep
docs/: PRD_TEMPLATE.md  PROJECT.md  STATUS.md  agents-flows.md  agents-reference.md  api.md  api_documentation.md  coding-standards.md
docs/decisions/: ADR-005-design-system.md
docs/features/: FEATURE_TEMPLATE.md  neues-logo.md  (+14 more)
scripts/: reset_admin.py
templates/: admin.html  index.html  login.html
tests/: conftest.py  test_admin.py  test_auth.py  test_auth_router.py  test_deepl_service.py  test_history.py  test_i18n_service.py  test_llm_router.py  test_llm_service.py  test_profile.py  test_streaming.py  test_translate.py  test_translate_coverage.py  test_usage.py  test_user_service.py  test_validation.py
(+21 files in other folders)
