[project]
name = "senten"
version = "1.0.1"
description = "Senten — AI-powered text refinement via DeepL API"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["F", "E", "W", "I"]  # pyflakes, pycodestyle, warnings, isort
ignore = ["E501"]  # Line too long - for flexibility

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501", "F401"]  # Allow unused imports in tests
